alt text change

--- a/socialmedia.html
+++ b/socialmedia.html
@@ -56,14 +56,13 @@ https://use.fontawesome.com/releases/v5.7.2/css/all.css
      <!-- Img Carousel -->
           <section id="img-carousel" class="hidden tab">
             <div class="tab-content">
-              <h2>Images</h2>
               <div id="slide-container">
                 <div id="img-wrapper">
-                  <img src="1.png" alt="Two black cats curled up asleep on a sofa" class="images" id="photo1">
-                  <img src="3.png" alt="A black cat on a windowsill" class="images hidden-img" id="photo2">
-                  <img src="4.png" alt="Two cats making mischief in the kitchen" class="images hidden-img" id="photo3">
-                  <img src="5.png" alt="Two cats making mischief in the kitchen" class="images hidden-img" id="photo4">
-                  <img src="10.png" alt="Two cats making mischief in the kitchen" class="images hidden-img" id="photo5">
+                  <img src="1.png" alt="Page 1" class="images" id="photo1">
+                  <img src="3.png" alt="Page 2" class="images hidden-img" id="photo2">
+                  <img src="4.png" alt="Page 3" class="images hidden-img" id="photo3">
+                  <img src="5.png" alt="Page 4" class="images hidden-img" id="photo4">
+                  <img src="10.png" alt="Page 5" class="images hidden-img" id="photo5">
                   <video width="320" height="240" autoplay muted class="images hidden-img">
 					<source src="Uni.MOV" type="video/mp4">
 					Your browser does not support the video tag.
